y.output
Gramática

    0 $accept: linea $end

    1 linea: linea AsignacionDeVariable '\n'
    2      | AsignacionDeVariable '\n'
    3      | linea Comandos '\n'
    4      | Comandos '\n'

    5 Comandos: EXIT
    6         | ERROR
    7         | TABLE
    8         | NumExpr
    9         | print '(' NumExpr ')'
   10         | HELP
   11         | Conversion
   12         | COMENTARIO
   13         | PRINTL '(' ')'

   14 AsignacionDeVariable: TKN_ID '=' NumExpr
   15                     | TKN_ID TKN_SUM_ASSIGN NumExpr
   16                     | TKN_ID TKN_RES_ASSIGN NumExpr
   17                     | TKN_ID TKN_MUL_ASSIGN NumExpr
   18                     | TKN_ID TKN_DIV_ASSIGN NumExpr
   19                     | TKN_ID DMAS
   20                     | TKN_ID DMENOS

   21 Termino: TKN_NUM
   22        | TKN_ID

   23 Conversion: BIN '(' NumExpr ')'
   24           | TRN '(' NumExpr ')'
   25           | CTN '(' NumExpr ')'
   26           | PTL '(' NumExpr ')'
   27           | SNR '(' NumExpr ')'
   28           | HPT '(' NumExpr ')'
   29           | OCT '(' NumExpr ')'
   30           | NNR '(' NumExpr ')'
   31           | HXD '(' NumExpr ')'
   32           | DEC '(' NumExpr ')'
   33           | ROM '(' NumExpr ')'
   34           | CONVERT_ALL '(' NumExpr ')'

   35 NumExpr: Termino
   36        | '+' NumExpr
   37        | '-' NumExpr
   38        | DMENOS NumExpr
   39        | DMAS NumExpr
   40        | NumExpr '+' NumExpr
   41        | NumExpr '-' NumExpr
   42        | NumExpr '*' NumExpr
   43        | NumExpr '/' NumExpr
   44        | NumExpr '%' NumExpr
   45        | NumExpr '!'
   46        | NumExpr '^' NumExpr
   47        | TKN_ABS '(' NumExpr ')'
   48        | '|' NumExpr '|'
   49        | '(' NumExpr ')'
   50        | '[' NumExpr ']'
   51        | '{' NumExpr '}'
   52        | TKN_COS '(' NumExpr ')'
   53        | TKN_SEN '(' NumExpr ')'
   54        | TKN_TAN '(' NumExpr ')'
   55        | TKN_SEC '(' NumExpr ')'
   56        | TKN_CSC '(' NumExpr ')'
   57        | TKN_CTG '(' NumExpr ')'
   58        | TKN_ACOS '(' NumExpr ')'
   59        | TKN_ASEN '(' NumExpr ')'
   60        | TKN_ATAN '(' NumExpr ')'
   61        | TKN_ATAN2 '(' NumExpr ',' NumExpr ')'
   62        | TKN_COS '(' NumExpr deg ')'
   63        | TKN_SEN '(' NumExpr deg ')'
   64        | TKN_TAN '(' NumExpr deg ')'
   65        | TKN_SEC '(' NumExpr deg ')'
   66        | TKN_CSC '(' NumExpr deg ')'
   67        | TKN_CTG '(' NumExpr deg ')'
   68        | deg TKN_ACOS '(' NumExpr ')'
   69        | deg TKN_ASEN '(' NumExpr ')'
   70        | deg TKN_ATAN '(' NumExpr ')'
   71        | deg TKN_ATAN2 '(' NumExpr ',' NumExpr ')'
   72        | TKN_COSH '(' NumExpr ')'
   73        | TKN_SENH '(' NumExpr ')'
   74        | TKN_TANH '(' NumExpr ')'
   75        | TKN_ACOSH '(' NumExpr ')'
   76        | TKN_ASENH '(' NumExpr ')'
   77        | TKN_ATANH '(' NumExpr ')'
   78        | TKN_SQRT '(' NumExpr ')'
   79        | TKN_CBRT '(' NumExpr ')'
   80        | TKN_EXP '(' NumExpr ')'
   81        | TKN_LOG '(' NumExpr ')'
   82        | TKN_LOG10 '(' NumExpr ')'
   83        | TKN_LOG2 '(' NumExpr ')'
   84        | TKN_GAMMA '(' NumExpr ')'
   85        | TKN_HYPOT '(' NumExpr ',' NumExpr ')'
   86        | NumExpr '|' NumExpr '|'
   87        | NumExpr '(' NumExpr ')'
   88        | NumExpr '[' NumExpr ']'
   89        | NumExpr '{' NumExpr '}'


Terminales con las reglas donde aparecen

    $end (0) 0
    '\n' (10) 1 2 3 4
    '!' (33) 45
    '%' (37) 44
    '(' (40) 9 13 23 24 25 26 27 28 29 30 31 32 33 34 47 49 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 87
    ')' (41) 9 13 23 24 25 26 27 28 29 30 31 32 33 34 47 49 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 87
    '*' (42) 42
    '+' (43) 36 40
    ',' (44) 61 71 85
    '-' (45) 37 41
    '/' (47) 43
    '=' (61) 14
    '[' (91) 50 88
    ']' (93) 50 88
    '^' (94) 46
    '{' (123) 51 89
    '|' (124) 48 86
    '}' (125) 51 89
    error (256)
    EXIT (258) 5
    CONVERT_ALL (259) 34
    TABLE (260) 7
    PRINTL (261) 13
    print (262) 9
    ERROR (263) 6
    HELP (264) 10
    COMENTARIO (265) 12
    TKN_ID <id> (266) 14 15 16 17 18 19 20 22
    TKN_NUM <real> (267) 21
    TKN_SUM_ASSIGN (268) 15
    TKN_RES_ASSIGN (269) 16
    TKN_MUL_ASSIGN (270) 17
    TKN_DIV_ASSIGN (271) 18
    DMAS (272) 19 39
    DMENOS (273) 20 38
    TKN_CBRT (274) 79
    TKN_SQRT (275) 78
    TKN_ABS (276) 47
    deg (277) 62 63 64 65 66 67 68 69 70 71
    TKN_COS (278) 52 62
    TKN_SEN (279) 53 63
    TKN_TAN (280) 54 64
    TKN_SEC (281) 55 65
    TKN_CSC (282) 56 66
    TKN_CTG (283) 57 67
    TKN_ACOS (284) 58 68
    TKN_ASEN (285) 59 69
    TKN_ATAN (286) 60 70
    TKN_ATAN2 (287) 61 71
    TKN_COSH (288) 72
    TKN_SENH (289) 73
    TKN_TANH (290) 74
    TKN_LOG (291) 81
    TKN_LOG10 (292) 82
    TKN_EXP (293) 80
    BIN (294) 23
    TRN (295) 24
    CTN (296) 25
    PTL (297) 26
    SNR (298) 27
    HPT (299) 28
    OCT (300) 29
    NNR (301) 30
    HXD (302) 31
    DEC (303) 32
    ROM (304) 33
    TKN_LOG2 (305) 83
    TKN_ACOSH (306) 75
    TKN_ASENH (307) 76
    TKN_ATANH (308) 77
    TKN_GAMMA (309) 84
    TKN_HYPOT (310) 85
    UNMINUS (311)
    UNPLUS (312)


No terminales con las reglas donde aparecen

    $accept (75)
        on left: 0
    linea <real> (76)
        on left: 1 2 3 4
        on right: 0 1 3
    Comandos (77)
        on left: 5 6 7 8 9 10 11 12 13
        on right: 3 4
    AsignacionDeVariable <id> (78)
        on left: 14 15 16 17 18 19 20
        on right: 1 2
    Termino <real> (79)
        on left: 21 22
        on right: 35
    Conversion (80)
        on left: 23 24 25 26 27 28 29 30 31 32 33 34
        on right: 11
    NumExpr <real> (81)
        on left: 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89
        on right: 8 9 14 15 16 17 18 23 24 25 26 27 28 29 30 31 32 33 34 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89


Estado 0

    0 $accept: . linea $end

    EXIT         desplazar e ir al estado 1
    CONVERT_ALL  desplazar e ir al estado 2
    TABLE        desplazar e ir al estado 3
    PRINTL       desplazar e ir al estado 4
    print        desplazar e ir al estado 5
    ERROR        desplazar e ir al estado 6
    HELP         desplazar e ir al estado 7
    COMENTARIO   desplazar e ir al estado 8
    TKN_ID       desplazar e ir al estado 9
    TKN_NUM      desplazar e ir al estado 10
    DMAS         desplazar e ir al estado 11
    DMENOS       desplazar e ir al estado 12
    TKN_CBRT     desplazar e ir al estado 13
    TKN_SQRT     desplazar e ir al estado 14
    TKN_ABS      desplazar e ir al estado 15
    deg          desplazar e ir al estado 16
    TKN_COS      desplazar e ir al estado 17
    TKN_SEN      desplazar e ir al estado 18
    TKN_TAN      desplazar e ir al estado 19
    TKN_SEC      desplazar e ir al estado 20
    TKN_CSC      desplazar e ir al estado 21
    TKN_CTG      desplazar e ir al estado 22
    TKN_ACOS     desplazar e ir al estado 23
    TKN_ASEN     desplazar e ir al estado 24
    TKN_ATAN     desplazar e ir al estado 25
    TKN_ATAN2    desplazar e ir al estado 26
    TKN_COSH     desplazar e ir al estado 27
    TKN_SENH     desplazar e ir al estado 28
    TKN_TANH     desplazar e ir al estado 29
    TKN_LOG      desplazar e ir al estado 30
    TKN_LOG10    desplazar e ir al estado 31
    TKN_EXP      desplazar e ir al estado 32
    BIN          desplazar e ir al estado 33
    TRN          desplazar e ir al estado 34
    CTN          desplazar e ir al estado 35
    PTL          desplazar e ir al estado 36
    SNR          desplazar e ir al estado 37
    HPT          desplazar e ir al estado 38
    OCT          desplazar e ir al estado 39
    NNR          desplazar e ir al estado 40
    HXD          desplazar e ir al estado 41
    DEC          desplazar e ir al estado 42
    ROM          desplazar e ir al estado 43
    '+'          desplazar e ir al estado 44
    '-'          desplazar e ir al estado 45
    TKN_LOG2     desplazar e ir al estado 46
    TKN_ACOSH    desplazar e ir al estado 47
    TKN_ASENH    desplazar e ir al estado 48
    TKN_ATANH    desplazar e ir al estado 49
    TKN_GAMMA    desplazar e ir al estado 50
    TKN_HYPOT    desplazar e ir al estado 51
    '('          desplazar e ir al estado 52
    '['          desplazar e ir al estado 53
    '{'          desplazar e ir al estado 54
    '|'          desplazar e ir al estado 55

    linea                 ir al estado 56
    Comandos              ir al estado 57
    AsignacionDeVariable  ir al estado 58
    Termino               ir al estado 59
    Conversion            ir al estado 60
    NumExpr               ir al estado 61


Estado 1

    5 Comandos: EXIT .

    $default  reduce usando la regla 5 (Comandos)


Estado 2

   34 Conversion: CONVERT_ALL . '(' NumExpr ')'

    '('  desplazar e ir al estado 62


Estado 3

    7 Comandos: TABLE .

    $default  reduce usando la regla 7 (Comandos)


Estado 4

   13 Comandos: PRINTL . '(' ')'

    '('  desplazar e ir al estado 63


Estado 5

    9 Comandos: print . '(' NumExpr ')'

    '('  desplazar e ir al estado 64


Estado 6

    6 Comandos: ERROR .

    $default  reduce usando la regla 6 (Comandos)


Estado 7

   10 Comandos: HELP .

    $default  reduce usando la regla 10 (Comandos)


Estado 8

   12 Comandos: COMENTARIO .

    $default  reduce usando la regla 12 (Comandos)


Estado 9

   14 AsignacionDeVariable: TKN_ID . '=' NumExpr
   15                     | TKN_ID . TKN_SUM_ASSIGN NumExpr
   16                     | TKN_ID . TKN_RES_ASSIGN NumExpr
   17                     | TKN_ID . TKN_MUL_ASSIGN NumExpr
   18                     | TKN_ID . TKN_DIV_ASSIGN NumExpr
   19                     | TKN_ID . DMAS
   20                     | TKN_ID . DMENOS
   22 Termino: TKN_ID .

    TKN_SUM_ASSIGN  desplazar e ir al estado 65
    TKN_RES_ASSIGN  desplazar e ir al estado 66
    TKN_MUL_ASSIGN  desplazar e ir al estado 67
    TKN_DIV_ASSIGN  desplazar e ir al estado 68
    DMAS            desplazar e ir al estado 69
    DMENOS          desplazar e ir al estado 70
    '='             desplazar e ir al estado 71

    $default  reduce usando la regla 22 (Termino)


Estado 10

   21 Termino: TKN_NUM .

    $default  reduce usando la regla 21 (Termino)


Estado 11

   39 NumExpr: DMAS . NumExpr

    TKN_ID     desplazar e ir al estado 72
    TKN_NUM    desplazar e ir al estado 10
    DMAS       desplazar e ir al estado 11
    DMENOS     desplazar e ir al estado 12
    TKN_CBRT   desplazar e ir al estado 13
    TKN_SQRT   desplazar e ir al estado 14
    TKN_ABS    desplazar e ir al estado 15
    deg        desplazar e ir al estado 16
    TKN_COS    desplazar e ir al estado 17
    TKN_SEN    desplazar e ir al estado 18
    TKN_TAN    desplazar e ir al estado 19
    TKN_SEC    desplazar e ir al estado 20
    TKN_CSC    desplazar e ir al estado 21
    TKN_CTG    desplazar e ir al estado 22
    TKN_ACOS   desplazar e ir al estado 23
    TKN_ASEN   desplazar e ir al estado 24
    TKN_ATAN   desplazar e ir al estado 25
    TKN_ATAN2  desplazar e ir al estado 26
    TKN_COSH   desplazar e ir al estado 27
    TKN_SENH   desplazar e ir al estado 28
    TKN_TANH   desplazar e ir al estado 29
    TKN_LOG    desplazar e ir al estado 30
    TKN_LOG10  desplazar e ir al estado 31
    TKN_EXP    desplazar e ir al estado 32
    '+'        desplazar e ir al estado 44
    '-'        desplazar e ir al estado 45
    TKN_LOG2   desplazar e ir al estado 46
    TKN_ACOSH  desplazar e ir al estado 47
    TKN_ASENH  desplazar e ir al estado 48
    TKN_ATANH  desplazar e ir al estado 49
    TKN_GAMMA  desplazar e ir al estado 50
    TKN_HYPOT  desplazar e ir al estado 51
    '('        desplazar e ir al estado 52
    '['        desplazar e ir al estado 53
    '{'        desplazar e ir al estado 54
    '|'        desplazar e ir al estado 55

    Termino  ir al estado 59
    NumExpr  ir al estado 73


Estado 12

   38 NumExpr: DMENOS . NumExpr

    TKN_ID     desplazar e ir al estado 72
    TKN_NUM    desplazar e ir al estado 10
    DMAS       desplazar e ir al estado 11
    DMENOS     desplazar e ir al estado 12
    TKN_CBRT   desplazar e ir al estado 13
    TKN_SQRT   desplazar e ir al estado 14
    TKN_ABS    desplazar e ir al estado 15
    deg        desplazar e ir al estado 16
    TKN_COS    desplazar e ir al estado 17
    TKN_SEN    desplazar e ir al estado 18
    TKN_TAN    desplazar e ir al estado 19
    TKN_SEC    desplazar e ir al estado 20
    TKN_CSC    desplazar e ir al estado 21
    TKN_CTG    desplazar e ir al estado 22
    TKN_ACOS   desplazar e ir al estado 23
    TKN_ASEN   desplazar e ir al estado 24
    TKN_ATAN   desplazar e ir al estado 25
    TKN_ATAN2  desplazar e ir al estado 26
    TKN_COSH   desplazar e ir al estado 27
    TKN_SENH   desplazar e ir al estado 28
    TKN_TANH   desplazar e ir al estado 29
    TKN_LOG    desplazar e ir al estado 30
    TKN_LOG10  desplazar e ir al estado 31
    TKN_EXP    desplazar e ir al estado 32
    '+'        desplazar e ir al estado 44
    '-'        desplazar e ir al estado 45
    TKN_LOG2   desplazar e ir al estado 46
    TKN_ACOSH  desplazar e ir al estado 47
    TKN_ASENH  desplazar e ir al estado 48
    TKN_ATANH  desplazar e ir al estado 49
    TKN_GAMMA  desplazar e ir al estado 50
    TKN_HYPOT  desplazar e ir al estado 51
    '('        desplazar e ir al estado 52
    '['        desplazar e ir al estado 53
    '{'        desplazar e ir al estado 54
    '|'        desplazar e ir al estado 55

    Termino  ir al estado 59
    NumExpr  ir al estado 74


Estado 13

   79 NumExpr: TKN_CBRT . '(' NumExpr ')'

    '('  desplazar e ir al estado 75


Estado 14

   78 NumExpr: TKN_SQRT . '(' NumExpr ')'

    '('  desplazar e ir al estado 76


Estado 15

   47 NumExpr: TKN_ABS . '(' NumExpr ')'

    '('  desplazar e ir al estado 77


Estado 16

   68 NumExpr: deg . TKN_ACOS '(' NumExpr ')'
   69        | deg . TKN_ASEN '(' NumExpr ')'
   70        | deg . TKN_ATAN '(' NumExpr ')'
   71        | deg . TKN_ATAN2 '(' NumExpr ',' NumExpr ')'

    TKN_ACOS   desplazar e ir al estado 78
    TKN_ASEN   desplazar e ir al estado 79
    TKN_ATAN   desplazar e ir al estado 80
    TKN_ATAN2  desplazar e ir al estado 81


Estado 17

   52 NumExpr: TKN_COS . '(' NumExpr ')'
   62        | TKN_COS . '(' NumExpr deg ')'

    '('  desplazar e ir al estado 82


Estado 18

   53 NumExpr: TKN_SEN . '(' NumExpr ')'
   63        | TKN_SEN . '(' NumExpr deg ')'

    '('  desplazar e ir al estado 83


Estado 19

   54 NumExpr: TKN_TAN . '(' NumExpr ')'
   64        | TKN_TAN . '(' NumExpr deg ')'

    '('  desplazar e ir al estado 84


Estado 20

   55 NumExpr: TKN_SEC . '(' NumExpr ')'
   65        | TKN_SEC . '(' NumExpr deg ')'

    '('  desplazar e ir al estado 85


Estado 21

   56 NumExpr: TKN_CSC . '(' NumExpr ')'
   66        | TKN_CSC . '(' NumExpr deg ')'

    '('  desplazar e ir al estado 86


Estado 22

   57 NumExpr: TKN_CTG . '(' NumExpr ')'
   67        | TKN_CTG . '(' NumExpr deg ')'

    '('  desplazar e ir al estado 87


Estado 23

   58 NumExpr: TKN_ACOS . '(' NumExpr ')'

    '('  desplazar e ir al estado 88


Estado 24

   59 NumExpr: TKN_ASEN . '(' NumExpr ')'

    '('  desplazar e ir al estado 89


Estado 25

   60 NumExpr: TKN_ATAN . '(' NumExpr ')'

    '('  desplazar e ir al estado 90


Estado 26

   61 NumExpr: TKN_ATAN2 . '(' NumExpr ',' NumExpr ')'

    '('  desplazar e ir al estado 91


Estado 27

   72 NumExpr: TKN_COSH . '(' NumExpr ')'

    '('  desplazar e ir al estado 92


Estado 28

   73 NumExpr: TKN_SENH . '(' NumExpr ')'

    '('  desplazar e ir al estado 93


Estado 29

   74 NumExpr: TKN_TANH . '(' NumExpr ')'

    '('  desplazar e ir al estado 94


Estado 30

   81 NumExpr: TKN_LOG . '(' NumExpr ')'

    '('  desplazar e ir al estado 95


Estado 31

   82 NumExpr: TKN_LOG10 . '(' NumExpr ')'

    '('  desplazar e ir al estado 96


Estado 32

   80 NumExpr: TKN_EXP . '(' NumExpr ')'
